<resources>
    <string name="app_name">cyFit</string>

    <!-- Strings related to login -->
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name (Optional)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_redirect">User already exists! Click here to login</string>
    <string name="action_register">Register</string>
    <string name="action_register_user_link">"New to CyFit? Register here"</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This provided passwords are invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_name">Victor Da Silva</string>
    <string name="workout_history">Workout History</string>
    <string name="nutrition_history">Nutrition History</string>
    <string name="goals">Goals</string>
    <string name="friends">Friends</string>
    <string name="favorite_workouts">Favorite Workouts</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="title_activity_myhistory">My History</string>


    <string name="title_activity_home">CyFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_workout">WorkoutActivity</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_profile">User Profile</string>
    <string name="nav_workout">Workout</string>
    <string name="nav_nutrition">Nutrition</string>
    <string name="nav_music">Music</string>
    <string name="nav_calender">Calender</string>
    <string name="nav_maps">Maps</string>
    <string name="nav_logout">Logout</string>

    <string name="add_workout">Add Workout</string>
    <string name="add_goal">Add Goal</string>
    <string name="title_activity_workout_history">WorkoutHistoryActivity</string>
    <string name="title_activity_nutrition_history">NutritionHistoryActivity</string>
    <string name="title_activity_goals">GoalsActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_favorite_workouts">FavoriteWorkoutsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_helping">HelpingActivity</string>

    <string name="workout_list_title">Workouts completed on </string>
    <string name="nutrition_list_title">Food logged on </string>
    <string name="music_list_title">Music listened to on </string>
    <string name="title_activity_registration">Register</string>
    <string name="add_nutrition">Add Nutrition</string>


    <string name="default_username">Username</string>
    <string name="default_email">Email</string>

    <string name="log_food"><b><i>Log Food</i></b></string>
    <string name="log_food_hint">Food Brand or Name</string>
    <string name="title_activity_log_food">LogFoodActivity</string>
    <string name="title_activity_my_info">MyInfo</string>
    <string name="title_activity_add_favorite_workout">AddFavoriteWorkoutActivity</string>

    <string name="finish_log_food">Finish</string>
    <string name="view_food_list">Food List</string>
    <string name="calories_title"><u><b>Calories</b></u></string>
    <string name="calories_total">Total: 0</string>
    <string name="calories_remaining">Remaining: 2000</string>

    <string name="weight_title"><u><b>Current Weight</b></u></string>
    <string name="weigh_in"><b><i>Weigh In</i></b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_goal_title">Delete this Goal?</string>

</resources>
