<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_face_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_workout"
            android:icon="@mipmap/ic_fitness_center_black_24dp"
            android:title="@string/nav_workout" />
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@mipmap/ic_local_dining_black_24dp"
            android:title="@string/nav_nutrition" />
        <item
            android:id="@+id/nav_music"
            android:icon="@mipmap/ic_music_note_black_24dp"
            android:title="@string/nav_music" />
        <item
        android:id="@+id/nav_calender"
        android:icon="@mipmap/ic_date_range_black_24dp"
        android:title="@string/nav_calender" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@mipmap/ic_date_range_black_24dp"
            android:title="@string/nav_maps" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_power_settings_new_black_24dp"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/toggle_bottom_bar"
            android:icon="@mipmap/ic_power_settings_new_black_24dp"
            android:title="toggle bottom bar" />
    </group>

</menu>
