<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/cyFitpackage.cyfit"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.24"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textSize="36sp" />

    <ImageView
        android:src="@mipmap/profilepic"
        android:id="@+id/ProfilePic"
        android:layout_gravity="center"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="100dp"
        android:layout_weight="0.17" />

    <Button
        android:id="@+id/myInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:text="My Info" />

    <Button
        android:text="@string/goals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GoalsButton" />

    <Button
        android:text="@string/friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FriendsButton" />

    <Button
        android:text="@string/favorite_workouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FavoriteWorkoutsButton" />

    <Button
        android:text="@string/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HelpButton" />
</LinearLayout>